--- a/CW15/4.html
+++ b/CW15/4.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="4.css">
 </head>
 <body>
-    <a class="a-first" href="http://google.com/", target="_blank">google</button></a>
-    <a class="a-second" href="http://wikipedia.com/" target="_blank">wikipedia</button></a>
-
+    <div class="bt">
+    <a class="a-first" href="https://google.com/", target="_blank">google</button></a>
+    <br>
+    <a class="a-second" href="https://wikipedia.com/" target="_blank">wikipedia</button></a>
+    </div>
 </body>
 </html>
