--- a/CW19/test.html
+++ b/CW19/test.html
@@ -2,8 +2,8 @@
     <html>
 
     <body>
-
-
-    <script src="3.js"></script>
+    <p style="display: none" id="#thetext">you got hacked XD</p>
+    <button onclick="q4()">Click me!</button>
+    <script src="4.js"></script>
     </body>
     </html>
